--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:oracle:thin:@//localhost:11521/oracle
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
 spring.datasource.username=oracle
 spring.datasource.password=oracle
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
