--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
-spring.datasource.username=oracle
-spring.datasource.password=oracle
+spring.datasource.url=jdbc:oracle:thin:@//192.168.56.104:1521/XEPDB1
+spring.datasource.username=hr
+spring.datasource.password=hr
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database=oracle
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
